--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -1,24 +1,26 @@
-:root {
-  --header-height: 88px;
-}
-
 .wrapper {
+  box-shadow: 0px 1px 1px rgb(0 0 0 /12%);
+  background: #fff;
   height: var(--header-height);
   width: 100%;
-  box-shadow: 0px 1px 1px rgb(0 0 0 /12%);
   display: flex;
   justify-content: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .inner {
   display: flex;
   align-items: center;
   // background-color: cyan;
-  width: 1270px;
-  & li {
+  width: 1200px;
+  li {
     list-style: none;
   }
-  & a {
+  a {
     color: #000;
     text-decoration: none;
   }
@@ -36,63 +38,89 @@
   height: 100%;
   display: flex;
   flex-grow: 0;
+  transition: display 0.4s;
+
+  .nav-item {
+    font-size: 17px;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    a {
+      display: block;
+      line-height: var(--header-height);
+    }
+    + .nav-item {
+      margin-left: 24px;
+    }
+  }
 }
 
-.nav-item {
-  font-size: 17px;
-  font-weight: 700;
-  text-transform: uppercase;
-  & a {
-    display: block;
-    line-height: var(--header-height);
-  }
-  & + .nav-item {
-    margin-left: 24px;
-  }
-}
 .btns-list {
   flex-grow: 1;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
-.btn {
-  font-size: 22px;
-  margin-left: 32px;
 
-  & a {
-    color: #000;
+  .btn {
+    font-size: 22px;
+    margin-left: 32px;
+
+    a {
+      color: #000;
+    }
   }
 }
+
 .search-box {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
-  padding: 0px 15px;
-  border-radius: 25px;
-  background: #000;
+  // background: #000;
+  width: 48px;
+  height: 48px;
   cursor: pointer;
-  &:hover .search-input {
-    width: 350px;
-    padding-right: 12px;
+
+  &:hover {
+    .search-input {
+      // display: block;
+      width: 500px;
+      position: absolute;
+      right: 0px;
+      transition: 0.4s;
+      padding: 0 40px 0 20px;
+    }
+  }
+  .search-input {
+    // display: none;
+    position: absolute;
+    right: 0px;
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+    outline: none;
+    border: none;
+    background: #000;
+    color: #fff;
+    transition: 0.3s;
+    border-radius: 24px;
+  }
+
+  .search-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin: auto;
+    font-size: 16px;
+    background: #000;
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    color: #fff !important;
   }
 }
 
-.search-input {
-  font-size: 15px;
-  width: 0px;
-  outline: none;
-  border: none;
-  background: #000;
-  color: #fff;
-  transition: 0.4s;
-}
-
-.search-btn {
-  font-size: 16px;
-  padding: 12px 2px;
-  color: #fff !important;
-}
 .user {
 }
 .wishlist {
