--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,4 +1,4 @@
-.slider {
+.wrapper {
   margin-top: var(--header-height);
   // display: flex;
   position: relative;
@@ -7,7 +7,7 @@
   // justify-content: center;
   // align-items: center;
 }
-.container {
+.inner {
   width: 400vw;
   background: #000;
   display: flex;
