--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -8,14 +8,13 @@
   // align-items: center;
 }
 .inner {
-  width: 400vw;
   background: #000;
   display: flex;
   transition: 1.5s ease-out;
 
   // transform: translateX(-100vw);
   img {
-    width: 100vw;
+    min-width: 100vw;
     height: calc(100vh - var(--header-height));
     object-fit: cover;
   }
