--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,9 +3,9 @@
   color: #000;
 }
 .wrapper {
-  width: 230px;
+  width: calc(1200px * 25 / 100);
   min-height: 400px;
-  margin: 24px;
+  margin: 32px;
   border: 1px solid transparent;
   &:hover {
     border: 1px solid rgb(0 0 0 /30%);
@@ -29,8 +29,9 @@
     margin: 16px 8px 0;
   }
   .img {
-    width: 180px;
-    height: 180px;
+    min-width: 180px;
+    width: calc(100% - 48px);
+    min-height: 180px;
     display: flex;
     position: relative;
     margin: 24px;
