--- a/src/components/NewProducts/NewProducts.module.scss
+++ b/src/components/NewProducts/NewProducts.module.scss
@@ -5,19 +5,22 @@
   padding: 56px;
 }
 .inner {
+  max-width: 1200px;
+}
+.title {
+  width: 100%;
+  text-align: center;
+}
+.container {
   position: relative;
-  width: 1200px;
-
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .chevron-btn {
   position: absolute;
   top: 50%;
-  transform: translateX(-50%);
-  // flex-grow: 0;
+  transform: translateY(-50%);
   z-index: 1;
   opacity: 0.6;
   font-size: 35px;
@@ -30,13 +33,19 @@
   }
 }
 .carousel {
+  width: 1200px;
   white-space: nowrap;
-
-  // width: 100%;
   display: flex;
-  // flex-grow: 1;
-  // justify-content: center;
-  // align-items: flex-start;
+  overflow: hidden;
+  transition: all 2s;
+  animation: carousel-scroll 1s ease-in-out;
 }
 
-// viet vay cho nhanh ay ma
+@keyframes carousel-scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
