--- a/src/components/NewProducts/NewProducts.module.scss
+++ b/src/components/NewProducts/NewProducts.module.scss
@@ -5,6 +5,7 @@
   padding: 56px;
 }
 .inner {
+  // overflow: hidden;
   max-width: 1200px;
 }
 .title {
@@ -21,7 +22,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 1;
+  z-index: 2;
   opacity: 0.6;
   font-size: 35px;
   cursor: pointer;
@@ -37,15 +38,5 @@
   white-space: nowrap;
   display: flex;
   overflow: hidden;
-  transition: all 2s;
-  animation: carousel-scroll 1s ease-in-out;
-}
-
-@keyframes carousel-scroll {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
+  scroll-behavior: smooth;
 }
