--- a/src/components/NewProducts/NewProducts.module.scss
+++ b/src/components/NewProducts/NewProducts.module.scss
@@ -2,13 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 56px;
+  padding-top: 56px;
 }
 .inner {
   // overflow: hidden;
   max-width: 1200px;
 }
 .title {
+  text-transform: uppercase;
   width: 100%;
   text-align: center;
 }
