--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,7 +5,7 @@
 .wrapper {
   min-width: 236px;
   min-height: 236px;
-  margin: 32px;
+  margin: 0 32px;
   border: none;
   border-radius: 0 0 10px 10px;
   background-color: rgb(244, 242, 244);
@@ -32,11 +32,11 @@
     margin: 16px 8px 0;
   }
   .img {
-    width: 188px;
-    height: 188px;
+    width: 220px;
+    height: 220px;
     display: flex;
     position: relative;
-    margin: 24px;
+    margin: 8px;
     //   position: relative;
     .main-img,
     .second-img {
