--- a/src/components/TrendingProducts/TrendingProducts.module.scss
+++ b/src/components/TrendingProducts/TrendingProducts.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 56px;
+  padding: 64px 0;
 }
 .inner {
   // overflow: hidden;
@@ -12,6 +12,7 @@
   text-transform: uppercase;
   width: 100%;
   text-align: center;
+  margin-bottom: 32px;
 }
 .container {
   position: relative;
