--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -36,6 +36,7 @@
         background-color: rgb(237 235 237);
       }
       img {
+        transition: filter 0.3s;
         filter: contrast(60%);
       }
     }
