--- a/src/components/GlobalStyles/grid.scss
+++ b/src/components/GlobalStyles/grid.scss
@@ -1,16 +1,20 @@
 .grid {
-  //hien thi tren mobile ntn
-  width: 100%; //
+  width: 100%;
   display: block;
   padding: 0;
 }
 
 .grid.wide {
-  max-width: 1200px; // gioi han grid chi duoc 1200px
-  margin: 0 auto; // giup layout grid can giua
+  max-width: 1300px;
+  margin: 0 auto;
 }
 
-// dat lai do rong tren cac thiet bi
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -4px;
+  margin-right: -4px;
+}
 
 /*Tablet - Low resolution PC*/
 @media (min-width: 740px) and (max-width: 1023px) {
@@ -18,7 +22,19 @@
     width: 644px;
   }
 }
-
+// > Tablet
+@media (min-width: 740px) {
+  .row {
+    margin-left: -8px;
+    margin-right: -8px;
+  }
+}
+@media (min-width: 1113px) {
+  .row {
+    margin-left: -12px;
+    margin-right: -12px;
+  }
+}
 /*PC low resolution*/
 @media (min-width: 1024px) and (max-width: 1239px) {
   .wide {
@@ -29,25 +45,12 @@
     margin-right: -12px;
   }
 }
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -4px;
-  margin-right: -4px;
-}
-
-/* > Tablet */
-@media (min-width: 740px) {
-  .row {
-    margin-left: -8px;
-    margin-right: -8px;
+/*PC low resolution*/
+@media (min-width: 1239px) and (max-width: 1439px) {
+  .wide {
+    width: 1200px;
   }
-}
-
-/* < PC low resolution */
-@media (min-width: 1113px) {
-  .row {
+  .wide .row {
     margin-left: -12px;
     margin-right: -12px;
   }
@@ -185,7 +188,7 @@
   }
 }
 
-@media (min—width: 1113px) {
+@media (min-width: 1113px) {
   .col {
     padding-left: 12px;
     padding-right: 12px;
