--- a/src/components/ProductsList/ProductsList.module.scss
+++ b/src/components/ProductsList/ProductsList.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 64px 0;
+  scroll-behavior: smooth;
 }
 .inner {
   min-height: 500px;
@@ -15,4 +16,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 36px;
+}
+.pagination {
+  margin: auto;
 }
