update api and fix relating bugs

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -85,6 +85,8 @@
     font-size: 14px;
   }
   .name {
+    font-family: lushHandwritten !important;
+
     text-transform: uppercase;
   }
   .tagline {
