--- a/src/components/GlobalStyles/main.scss
+++ b/src/components/GlobalStyles/main.scss
@@ -26,6 +26,11 @@ body {
   line-height: 1.5;
 }
 
+@font-face {
+  font-family: lushHandwritten;
+  src: url('../../assets/fonts/LushHandwritten_WLat_Bd.otf');
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
