--- a/src/components/Header/ProductsMenu/ProductsMenu.module.scss
+++ b/src/components/Header/ProductsMenu/ProductsMenu.module.scss
@@ -3,7 +3,7 @@
   color: #000;
   min-height: 300px;
   position: absolute;
-  top: 50%;
+  top: 80%;
   left: 0;
   right: 0;
   background: #fff;
@@ -23,18 +23,19 @@
 .wrapper.active {
   opacity: 1;
   visibility: visible;
-  top: 80%;
+  top: 90%;
 }
 .wrapper.inactive {
   opacity: 0;
   visibility: hidden;
 }
 .inner {
-  padding: 40px;
+  padding: 20px 40px 40px;
   width: 1200px;
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
+  position: relative;
 }
 .title {
   text-transform: uppercase;
