--- a/src/components/ProductsList/ProductsList.module.scss
+++ b/src/components/ProductsList/ProductsList.module.scss
@@ -16,6 +16,16 @@
   justify-content: space-between;
   margin-bottom: 36px;
 }
+.sort {
+  height: 40px;
+  padding: 0 25px 0 15px;
+  font-size: 16px;
+  border-radius: 0;
+  border: 1px #ccc solid;
+  &select {
+    display: none;
+  }
+}
 .pagination {
   margin: auto;
 }
