--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -1,19 +1,21 @@
 .wrapper {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
-  padding: 64px 0;
-  background: #000;
+  padding: 75px 0;
 }
 .inner {
-  max-width: 1200px;
+  // max-width: 1200px;
 }
 .title {
   text-transform: uppercase;
-  color: #fff;
   width: 100%;
   text-align: center;
-  margin-bottom: 32px;
+  margin-bottom: 42px;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 5px;
 }
 .container {
   display: flex;
@@ -21,6 +23,7 @@
   align-items: center;
 
   .type {
+    overflow: hidden;
     width: calc(100% / 3);
     position: relative;
     display: flex;
@@ -28,37 +31,28 @@
     align-items: center;
     text-decoration: none;
     color: #000;
-    & + .type {
-      margin-left: 12px;
-    }
-    &:hover {
-      .category-btn {
-        background-color: rgb(237 235 237);
-      }
-      img {
-        transition: filter 0.3s;
-        filter: contrast(60%);
-      }
+    // & + .type {
+    //   margin-left: 12px;
+    // }
+    &:hover img {
+      transform: scale(1.2);
+      transition: all 2s;
+      filter: contrast(40%);
     }
 
     .category-btn {
       position: absolute;
-      min-width: 30px;
-      min-height: 50px;
-      background-color: rgba($color: #f4f2f4, $alpha: 0.6);
-      transition: 0.3s;
       z-index: 1;
-
-      .name {
-        line-height: 50px;
-        padding: 0 12px;
+      height: 50px;
+      .category-name {
+        font-size: 16px;
         text-transform: uppercase;
-        font-weight: 700;
+        line-height: 50px;
       }
     }
     img {
       width: 100%;
-      height: 70vh;
+      height: 80vh;
       object-fit: cover;
     }
   }
