--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
   box-shadow: 0px 1px 1px rgb(0 0 0 /12%);
   background: #fff;
   height: var(--header-height);
+  min-height: 56px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -16,7 +17,7 @@
   display: flex;
   align-items: center;
   // background-color: cyan;
-  width: 1200px;
+  width: 90%;
   li {
     list-style: none;
   }
@@ -27,8 +28,14 @@
 }
 .logo {
   flex-grow: 0;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  min-width: 115px;
+  margin-right: 20px;
   &-img {
-    max-height: calc(var(--header-height) - 8px);
+    max-height: 60px;
+    height: 100%;
   }
 }
 
@@ -43,15 +50,18 @@
   .nav-item {
     font-size: 17px;
     font-weight: 700;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-left: 24px;
+
     .title {
       text-transform: uppercase;
     }
-    & + .nav-item {
-      margin-left: 24px;
-    }
+
     & > a {
       position: relative;
-      padding: 20px 4px;
+      padding: 10px 4px;
       &::after {
         content: '';
         display: block;
@@ -78,7 +88,7 @@
   align-items: center;
 
   .btn {
-    font-size: 22px;
+    font-size: 20px;
     margin-left: 32px;
 
     a {
@@ -93,20 +103,10 @@
   justify-content: center;
   align-items: center;
   // background: #000;
-  width: 48px;
-  height: 48px;
+  width: 44px;
+  height: 44px;
   cursor: pointer;
 
-  &:hover {
-    .search-input {
-      // display: block;
-      width: 500px;
-      position: absolute;
-      right: 0px;
-      transition: 0.4s;
-      padding: 0 40px 0 20px;
-    }
-  }
   .search-input {
     // display: none;
     position: absolute;
@@ -120,8 +120,23 @@
     color: #fff;
     transition: 0.3s;
     border-radius: 24px;
+    &:focus {
+      // display: block;
+      width: 400px;
+      position: absolute;
+      right: 0px;
+      transition: 0.4s;
+      padding: 0 40px 0 20px;
+    }
   }
-
+  &:hover .search-input {
+    // display: block;
+    width: 400px;
+    position: absolute;
+    right: 0px;
+    transition: 0.4s;
+    padding: 0 40px 0 20px;
+  }
   .search-btn {
     display: flex;
     justify-content: center;
@@ -130,8 +145,8 @@
     margin: auto;
     font-size: 16px;
     background: #000;
-    width: 48px;
-    height: 48px;
+    width: 44px;
+    height: 44px;
     border-radius: 24px;
     color: #fff !important;
   }
