--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,18 +1,12 @@
 .wrapper {
   margin-top: var(--header-height);
-  // display: flex;
   position: relative;
   overflow: hidden;
-
-  // justify-content: center;
-  // align-items: center;
 }
 .inner {
   background: #000;
   display: flex;
   transition: 1.5s ease-out;
-
-  // transform: translateX(-100vw);
   img {
     min-width: 100vw;
     height: calc(100vh - var(--header-height));
@@ -20,26 +14,44 @@
   }
 }
 .radio-btns {
-  display: none;
-}
-.manual {
   position: absolute;
   display: flex;
-  bottom: 10vh;
+  bottom: 15vh;
   left: 50vw;
   transform: translateX(-50%);
-  &-btn {
-    display: block;
-    width: 20px;
-    height: 20px;
+  width: 100%;
+  justify-content: center;
+  & .holder {
     margin: 0 10px;
-    border-radius: 10px;
-    border: 3px rgba(0, 0, 0, 0.6) solid;
-    box-shadow: 0px 0px 2px #ffffff;
-  }
-  :hover {
-    background: rgb(0 0 0 /80%);
+    position: relative;
+    display: inline-block;
+    padding-right: 20px;
     cursor: pointer;
-    transition: 0.5s;
+
+    & input {
+      display: none;
+      &:checked ~ span {
+        transition: all 1s;
+
+        background-color: rgba(0 0 0 /80%);
+      }
+    }
+    & span {
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 0;
+      height: 16px;
+      width: 16px;
+      border-radius: 10px;
+      outline: 3px solid rgba(0 0 0 /30%);
+      background-color: rgba(0 0 0 /30%);
+    }
+    &:hover {
+      span {
+        outline: 3px solid rgba(0 0 0 /60%);
+        transition: all 0.3s;
+      }
+    }
   }
 }
