--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -6,19 +6,21 @@
   margin-top: 32px;
 }
 .btn {
-  height: 40px;
-  padding: 0 8px;
-  font-size: 18px;
+  height: 42px;
+  padding: 0 10px;
+  font-size: 16px;
   cursor: pointer;
   outline: none;
   background: #000;
   color: #fff;
   transition: all 0.3s;
+  border: none;
   &:hover {
     opacity: 0.8;
   }
   &:disabled {
-    opacity: 0.3;
+    background-color: rgb(234, 234, 234);
+    color: #ccc;
     cursor: default;
   }
 }
@@ -29,11 +31,11 @@
     list-style: none;
     margin: 12px;
     padding: 0 8px;
-    font-size: 22px;
+    font-size: 20px;
     cursor: pointer;
     opacity: 0.5;
     &.active {
-      font-weight: 600;
+      font-weight: 700;
       opacity: 1;
     }
   }
