--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -4,16 +4,41 @@
   overflow: hidden;
 }
 .inner {
+  position: relative;
   background: #000;
   display: flex;
-  transition: 1.5s ease-out;
-  img {
+  flex-shrink: 0;
+  transition: all 1.5s linear;
+  height: calc(100vh - var(--header-height));
+  // transition: all 1s ease-out;
+  // animation: scroll 5s linear infinite;
+  & .slide {
+    // flex-basis: 25%;
     min-width: 100vw;
-    height: calc(100vh - var(--header-height));
+    // flex-shrink: 0;
     object-fit: cover;
+    //
+    min-width: 100vw;
+    // height: 100%;
+    // transition: translate 2s linear;
+    // position: absolute;
+    // left: 0;
+    // opacity: 1;
+    // z-index: 0;
+    // &.active {
+    //   animation: slide 1.5s ease-out;
+    //   z-index: 2;
+    // }
+    // &.prev-slide {
+    //   z-index: 1;
+    //   left: 0;
+    //   opacity: 1;
+    // }
   }
 }
+
 .radio-btns {
+  z-index: 5;
   position: absolute;
   display: flex;
   bottom: 15vh;
@@ -27,13 +52,15 @@
     display: inline-block;
     padding-right: 20px;
     cursor: pointer;
-
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     & input {
       display: none;
       &:checked ~ span {
-        transition: all 1s;
-
-        background-color: rgba(0 0 0 /80%);
+        transition: all 0.3s;
+        background-color: rgba(255 255 255 /90%);
       }
     }
     & span {
@@ -41,17 +68,35 @@
       display: block;
       top: 0;
       left: 0;
-      height: 16px;
-      width: 16px;
+      height: 20px;
+      width: 20px;
       border-radius: 10px;
-      outline: 3px solid rgba(0 0 0 /30%);
-      background-color: rgba(0 0 0 /30%);
+      border: 3px solid rgba(255 255 255 /30%);
+      background-color: rgba(255 255 255 /30%);
     }
     &:hover {
       span {
-        outline: 3px solid rgba(0 0 0 /60%);
+        border: 3px solid rgba(255 255 255 /80%);
         transition: all 0.3s;
       }
     }
   }
 }
+
+@keyframes slide {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+// @keyframes scroll {
+//   0% {
+//     transform: translate(0);
+//   }
+//   100% {
+//     transform: translateX(-200vw);
+//   }
+// }
