--- a/src/components/ProductsList/Filter/Filter.module.scss
+++ b/src/components/ProductsList/Filter/Filter.module.scss
@@ -7,72 +7,66 @@
 }
 
 .filter-item {
-  position: relative;
   padding: 20px;
+  position: relative;
   .title {
-    font-size: 20px;
+    position: relative;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
     text-transform: uppercase;
     display: inline-block;
   }
-  .collapsible {
-    float: right;
-    display: inline-block;
-  }
 
-  .content {
-    .list {
-      list-style: none;
-      //   display: none;
-      .item {
-        margin: 5px 0;
-        .holder {
-          position: relative;
-          padding-left: 30px;
-          display: block;
-          cursor: pointer;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          -ms-user-select: none;
-          user-select: none;
-          input {
-            display: none;
-            &:checked ~ .checkmark {
-              background-color: #000;
-              border: #000 solid 1px;
-              i {
-                display: block;
-              }
-            }
-          }
-          .checkmark {
-            position: absolute;
-            display: inline-block;
-            left: 0;
-            width: 18px;
-            height: 18px;
-            background: #fff;
-            border: 1px solid #ccc;
-            line-height: 24px;
-            top: 50%;
-            transform: translateY(-50%);
-            transition: all 0.3s ease-in-out;
+  // scent- key ingredient - color
 
-            i {
-              display: none;
-              position: absolute;
-              line-height: 18px;
-              left: 50%;
-              transform: translateX(-50%);
-              font-size: 15px;
-              color: #fff;
-            }
-            &:hover {
-              border: 1px solid #999999;
-            }
-          }
-          .item-text {
+  // position: relative;
+  .list-item {
+    margin: 5px 0;
+    .holder {
+      position: relative;
+      padding-left: 30px;
+      display: block;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      input {
+        display: none;
+        &:checked ~ .checkmark {
+          background-color: #000;
+          border: #000 solid 1px;
+          i {
+            display: block;
           }
         }
+      }
+      .checkmark {
+        position: absolute;
+        display: inline-block;
+        left: 0;
+        width: 18px;
+        height: 18px;
+        background: #fff;
+        border: 1px solid #ccc;
+        line-height: 24px;
+        top: 50%;
+        transform: translateY(-50%);
+        i {
+          display: none;
+          position: absolute;
+          line-height: 18px;
+          left: 50%;
+          transform: translateX(-50%);
+          font-size: 15px;
+          color: #fff;
+        }
+        &:hover {
+          border: 1px solid #999999;
+        }
+      }
+      .item-text {
       }
     }
   }
@@ -83,115 +77,75 @@
 // START: category CSS
 .filter-cat {
   background-color: #eaeaea;
+  box-shadow: 0 0 5px 1px #ccc;
+  li {
+    list-style: none;
+  }
 }
-.cat-list {
-  padding: 4px 0;
-
+.cat-item {
+  padding: 8px 0;
+  position: relative;
+  &.active {
+    background: #000;
+    height: 100px;
+    width: 100px;
+  }
   .sub-title {
-    font-size: 18px;
+    width: 100%;
+    font-size: 16px;
     text-transform: capitalize;
     display: inline-block;
-    font-weight: normal;
-  }
-  .collapsible {
-  }
-  .sub-list {
-    display: none;
-    list-style: none;
-    padding-left: 12px;
-    .item {
-      margin-top: 8px;
+    font-weight: 300;
+    position: relative;
+    i {
+      position: absolute;
+      right: 0;
     }
   }
 }
+
 // END: category CSS
 
-// START: Price CSS
-.filter-price .content {
-  width: 100%;
-  position: relative;
-  margin-top: 40px;
-  .progress {
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 5px;
-    background: #000;
-    z-index: 1;
-    border-radius: 2px;
-  }
-  .range-inputs {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background: #eaeaea;
-    border-radius: 2px;
-    height: 5px;
-    .range-min,
-    .range-max {
-      -webkit-appearance: none;
-      pointer-events: none;
-      position: absolute;
-      outline: none;
-      border: none;
-      width: 100%;
-      height: 5px;
-      background-color: transparent;
-      z-index: 2;
-      margin-bottom: 20px;
-      &::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        pointer-events: auto;
-        width: 18px;
-        height: 18px;
-        border-radius: 50%;
-        background: #000;
-        cursor: pointer;
-        transition: box-shadow 0.3s ease-out;
-        &:hover {
-          box-shadow: 0 0 0 4px #ddd;
-        }
-      }
-    }
-  }
-  .text-inputs {
-    margin: 30px 0;
-    width: 100%;
-    display: flex;
-    .text-min,
-    .text-max {
-      position: relative;
-      border-radius: none;
-      outline: none;
-      height: 40px;
-      padding: 0 8px;
-      margin: 0 8px;
-      width: 32%;
-      text-align: center;
-      font-size: 15px;
-    }
-    .separate-line {
-      width: 15px;
-      height: 2px;
-      background: #000;
-      margin: auto;
-    }
-    .currency {
-      line-height: 40px;
-    }
-  }
-
-  .filter-price-btn {
-    display: flex;
-
-    margin: auto;
-    // left: 50%;
-    // position: absolute;
-    // transform: translateX(-50%);
-    // width: 100%;
+// START: collapsible
+.collapsible-list {
+  display: none;
+  list-style: none;
+  padding-left: 12px;
+  .item {
+    margin-top: 8px;
   }
 }
+.collapsible-list.open {
+  display: block;
+}
 
-// END: Price CSS
+.collapsible-btn {
+  position: relative;
+  text-align: left;
+  width: 100%;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+}
+
+.collapsible-icon {
+  height: 100%;
+  line-height: 20px;
+  vertical-align: middle;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+// END: collapsible
+
+@keyframes open {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
