--- a/src/components/ProductsList/Filter/Filter.module.scss
+++ b/src/components/ProductsList/Filter/Filter.module.scss
@@ -13,7 +13,7 @@
     position: relative;
     width: 100%;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     display: inline-block;
   }
@@ -95,7 +95,7 @@
     font-size: 16px;
     text-transform: capitalize;
     display: inline-block;
-    font-weight: 300;
+    font-weight: 500;
     position: relative;
     i {
       position: absolute;
@@ -130,22 +130,18 @@
 }
 
 .collapsible-icon {
+  display: none;
   height: 100%;
   line-height: 20px;
-  vertical-align: middle;
+  padding: 0 4px;
   position: absolute;
   right: 0;
   top: 0;
+  &.minus.show {
+    display: block;
+  }
+  &.plus.show {
+    display: block;
+  }
 }
 // END: collapsible
-
-@keyframes open {
-  0% {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
