--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,7 +10,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 999;
+  z-index: 10;
   transition: height 0.3s ease-in-out;
 }
 
@@ -88,10 +88,10 @@
   justify-content: flex-end;
   align-items: center;
 
-  .btn {
+  .nav-btn {
     font-size: 20px;
     margin-left: 32px;
-
+    cursor: pointer;
     a {
       color: #000;
     }
