--- a/src/components/ProductsList/Filter/PriceFilter/PriceFilter.module.scss
+++ b/src/components/ProductsList/Filter/PriceFilter/PriceFilter.module.scss
@@ -67,8 +67,8 @@
     display: flex;
     .text-min,
     .text-max {
+      border: 1px solid #aeaeae;
       position: relative;
-      border-radius: none;
       outline: none;
       height: 40px;
       padding: 0 8px;
