--- a/src/components/GlobalStyles/main.scss
+++ b/src/components/GlobalStyles/main.scss
@@ -89,18 +89,51 @@ code {
   }
 }
 
-.divider::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 1px;
-  background-image: linear-gradient(
-    to right,
-    transparent,
-    transparent,
-    rgba(0 0 0 /0.3),
-    transparent,
-    transparent
-  );
+.input-wrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #aeaeae;
+  height: 40px;
+  .input-icon {
+    position: absolute;
+    font-size: 15px;
+    color: #000;
+    cursor: pointer;
+    padding: 0 8px;
+    &.minus {
+      left: 0;
+    }
+    &.plus {
+      right: 0;
+    }
+  }
+  .input-field {
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 16px;
+  }
+}
+
+.divider {
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 1px;
+    background-image: linear-gradient(
+      to right,
+      transparent,
+      transparent,
+      rgba(0 0 0 /0.3),
+      transparent,
+      transparent
+    );
+  }
 }
