--- a/src/components/Header/ProductsMenu/ProductsMenu.module.scss
+++ b/src/components/Header/ProductsMenu/ProductsMenu.module.scss
@@ -58,7 +58,7 @@
       content: '';
       display: block;
       position: absolute;
-      z-index: 1000000;
+      z-index: 20;
       bottom: 0;
       left: 0;
       width: 0;
