--- a/src/components/SingleProduct/SingleProduct.module.scss
+++ b/src/components/SingleProduct/SingleProduct.module.scss
@@ -1,12 +1,12 @@
-img {
-  width: 100%;
-}
-
 .wrapper {
-  margin-top: 150px;
+  margin-top: 250px;
   margin-bottom: 75px;
 }
 .gallery {
+  img {
+    width: 100%;
+  }
+
   .thumbs {
     .thumb-img {
       margin-bottom: 10px;
@@ -20,9 +20,45 @@ img {
     }
   }
   .selected {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
     .selected-img {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    // .holder {
+    //   // padding-bottom: 100%;
+    //   background: #000;
+    //   height: 200px;
+    //   width: 200px;
+    // }
+
+    .zoom-img {
+      display: none;
+      --zoom-t: 0%;
+      --zoom-r: 70%;
+      --zoom-b: 70%;
+      --zoom-l: 0;
+      z-index: 1;
+      position: absolute;
+      transform: scale(1.5);
+      pointer-events: none;
+      clip-path: inset(var(--zoom-t) var(--zoom-r) var(--zoom-b) var(--zoom-l));
     }
   }
+  //   .magnify {
+  //     width: 25%;
+  //     height: 25%;
+  //     scale: 1.3;
+  //     // background: #000;
+  //     position: absolute;
+  //     top: 20px;
+  //     left: 20px;
+  //     border: 2px solid #000;
+  //   }
+  // }
 }
 .product-summary {
   width: 100%;
@@ -52,38 +88,21 @@ img {
 }
 .cart {
   width: 100%;
+  height: 50px;
   display: flex;
   justify-content: space-between;
   .quantity {
+    height: 100%;
     width: 20%;
-    position: relative;
-    .quantity-icon {
-      position: absolute;
-      line-height: 40px;
-      font-size: 15px;
-      color: #000;
-      cursor: pointer;
-      padding: 0 8px;
-      &.minus {
-        left: 0;
-      }
-      &.plus {
-        right: 0;
-      }
-    }
-
-    .quantity-input {
-      width: 100%;
-      height: 40px;
-      text-align: center;
-      font-size: 16px;
-      &:focus {
-        outline: none;
-      }
-    }
   }
+
   .cart-btn {
     width: 75%;
+    height: 100%;
+    .cart-btn-text {
+      line-height: 50px;
+      font-size: 17px;
+    }
   }
 }
 .description {
@@ -92,10 +111,10 @@ img {
   margin-top: 40px;
   .desc-title {
     text-transform: uppercase;
-    font-size: 20px;
   }
   .sub-title {
     margin-top: 10px;
+    font-weight: 600;
   }
   p {
     text-align: justify;
