--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -82,7 +82,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 8px 16px;
+  padding: 8px 16px 16px;
   .text {
     padding: 4px;
     max-height: 36px;
