--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,18 +27,13 @@
     text-decoration: none;
   }
 }
-.logo {
-  flex-grow: 0;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  min-width: 115px;
-  margin-right: 20px;
-  &-img {
-    max-height: 60px;
-    height: 100%;
-  }
-}
+// .logo {
+//   flex-grow: 0;
+//   display: flex;
+//   align-items: center;
+//   height: 27px;
+//   width: 115px;
+// }
 
 .navbar {
   justify-content: center;
@@ -46,7 +41,6 @@
   height: 100%;
   display: flex;
   flex-grow: 0;
-  transition: display 0.4s;
 
   .nav-item {
     font-size: 17px;
