--- a/src/components/Articles/Articles.module.scss
+++ b/src/components/Articles/Articles.module.scss
@@ -10,7 +10,6 @@
     width: 100%;
     padding-bottom: 50%;
     cursor: pointer;
-
     .banner-img {
       position: absolute;
       width: 100%;
@@ -20,7 +19,7 @@
     }
   }
   &:hover {
-    box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 5px #000;
   }
   .summary {
     height: 180px;
@@ -28,14 +27,39 @@
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     padding: 10px 20px 20px;
-
+    a {
+      text-decoration: none;
+      color: #000;
+    }
     .title {
+      padding: 0 10px;
       overflow: hidden;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
-      margin-bottom: 10px;
       cursor: pointer;
+      position: relative;
+      display: block;
+      overflow: hidden;
+      margin-bottom: 10px;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 3px;
+        height: 100%;
+        left: 0px;
+        top: -100%;
+        background: #000;
+        opacity: 0;
+      }
+      &:hover {
+        &::after {
+          transition: all 0.5s ease-in-out;
+          top: 0;
+          opacity: 1;
+        }
+      }
     }
     .description {
       text-align: justify;
