--- a/src/components/Articles/Articles.module.scss
+++ b/src/components/Articles/Articles.module.scss
@@ -1,9 +1,17 @@
 .wrapper {
   min-height: 500px;
+  padding-bottom: 75px;
+}
+.title {
+  width: 100%;
+  font-size: 60px;
+  margin: 40px 0;
+  text-align: center;
+  padding: 0 30px;
 }
 .article {
   width: 100%;
-  margin: 20px 0;
+  margin: 30px 0;
   position: relative;
   .banner {
     position: relative;
@@ -19,7 +27,7 @@
     }
   }
   &:hover {
-    box-shadow: 0 0 5px #000;
+    box-shadow: 0 0 8px #ccc;
   }
   .summary {
     height: 180px;
@@ -31,7 +39,7 @@
       text-decoration: none;
       color: #000;
     }
-    .title {
+    .article-title {
       padding: 0 10px;
       overflow: hidden;
       display: -webkit-box;
