--- a/src/components/ProductBanner/ProductBanner.module.scss
+++ b/src/components/ProductBanner/ProductBanner.module.scss
@@ -12,9 +12,9 @@
   }
   .title {
     position: absolute;
-    font-weight: 500;
-    font-size: 50px;
+    font-size: 60px;
     color: #fff;
     text-transform: uppercase;
+    text-shadow: 0 0 5px #ccc;
   }
 }
