--- a/src/components/SingleProduct/SingleProduct.module.scss
+++ b/src/components/SingleProduct/SingleProduct.module.scss
@@ -100,8 +100,7 @@
     width: 75%;
     height: 100%;
     .cart-btn-text {
-      line-height: 50px;
-      font-size: 17px;
+      text-transform: uppercase;
     }
   }
 }
